task14/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: repo-2-ing
  namespace: exam-ravshan
spec:
  ingressClassName: nginx
  rules:
  - host: devops.ravshandev.uz
    http:
      paths:
      - backend:
          service:
            name: repo-2-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
